--- a/grid.html
+++ b/grid.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main>
-        <div class="item-a">A</div>
-        <div class="item-b">B</div>
-        <div class="item-c">C</div>
-        <div class="item-d">D</div>
-        <div class="item-e">E</div>
+        <div class="item-a"></div>
+        <div class="item-b"></div>
+        <div class="item-c"></div>
+        <div class="item-d"></div>
+        <div class="item-e"></div>
     </main>
 </body>
 </html>
